--- a/breakpad/build.gradle
+++ b/breakpad/build.gradle
@@ -49,3 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+ext {
+    PUBLISH_ARTIFACT_ID = 'native-crash'
+}
+apply from: './publish.gradle'
